Load Sound Data From Files (#150)
* Generic Asset Loading

* Load Sounds From Files

* Some Fixes

* Added OGG Vorbis Support

* Fix Native Android

* Fix WASM Build

* Fix macOS Build

* Salvage unmerged changes from cmake-mingw-things

* Bugfixes
* Fixed building on Windows + issues that could occur on non-Macs from stb_vorbis defining the "R" macro
* Fixed SoundSystemDS
* Fixed unmerged SoundEngine::playUI calls

* WIP SoundStream

* Sound Fixes

* SoundSystem cleanup

* Added Music
* Added support for streaming sounds via SoundStream
* Added SoundStream base class and SoundStreamAL
* SoundEngine listener position

* Fix Android & macOS Build Issues

* Fix Android Building (oops)

* SoundStream / Music Fixes
 * Fixed SoundStreamAL buffer re-use
 * Abstracted private SoundStreamAL functions
 * Added music to music_list.h
 * Moved AL_ERROR_CHECK to /thirdparty/OpenAL.h
 * Added AL_ERROR_SILENCE

* Fix unresolved merge conflicts

* Add SoundStreamAL.cpp to CMakeLists.txt

* Remove leftover "platforms/openal" directory

* Fixed building on macOS

* Fix VS Project Paths

* SoundStream Abstractions

* Update SoundSystemSL.cpp

* Update SoundSystemDS.cpp

* SoundStreamAL C++03 Compatibility

* for real this time

* More Paulscode Parity

* Support for loading from multiple sound/music directories

* Update README.md

* Update README.md

---------

Co-authored-by: BrentDaMage <BrentDaMage@users.noreply.github.com>
Co-authored-by: Brent <43089001+BrentDaMage@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,12 @@ xcuserdata/
 /game/assets/gui/touchgui2.png
 /game/assets/item/arrows.png
 /game/assets/item/sign.png
+# Sound
+/game/assets/sound
+/game/assets/newsound
+/game/assets/sound3
+/game/assets/music
+/game/assets/newmusic
 # Java
 /game/assets/terrain/sun.png
 /game/assets/terrain/moon.png
@@ -242,11 +248,11 @@ xcuserdata/
 # Ignore options.txt - where your configuration will be saved
 /game/options.txt
 /game/assetsO
-/game/assets/gui/feedback_fill.png
-/game/assets/gui/feedback_outer.png
-/game/assets/snow.png
-/game/assets/mob/pig.png
 
 # CLion
 /.idea
 /cmake-build-*
+
+# PCM sound extraction
+/tools/__pycache__
+/tools/venv
