--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -129,11 +129,13 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\Textures.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\TileRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\VertexPT.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundPathRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundData.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundDefs.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundEngine.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundSystem.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundStream.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\IArea.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\IBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\IncludeExcludeArea.hpp" />
@@ -176,6 +178,8 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\Lighting.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\BuildActionIntention.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\sound_list.h" />
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\music_list.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -257,10 +261,12 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\TileRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\WaterSideTexture.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\WaterTexture.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundPathRepository.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundData.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundEngine.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundRepository.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundSystem.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundStream.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\IBuildInput.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\IncludeExcludeArea.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\MouseHandler.cpp" />
@@ -307,6 +313,9 @@
     </ProjectReference>
     <ProjectReference Include="..\Network\Network.vcxproj">
       <Project>{e43f7c6a-a099-48c9-9d37-b56cd8d6d785}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\STB\STB.vcxproj">
+      <Project>{f332cb57-ff16-4d43-bbe0-76f28301daa8}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
