--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -172,6 +172,8 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityType.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityTypeDescriptor.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\MobCategory.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\entity\Spider.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\entity\Zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -296,6 +298,8 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Sheep.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\SynchedEntityData.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\MobCategory.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\entity\Spider.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\entity\Zombie.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
