--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -170,9 +170,9 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\PigRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\SheepFurRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\SheepRenderer.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\SkeletonRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\SpiderRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\RocketRenderer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\entity\ArrowRenderer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ControllerMoveInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\Lighting.hpp" />
@@ -300,9 +300,10 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\SheepRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\SpiderRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\RocketRenderer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\entity\ArrowRenderer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\Lighting.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\model\ZombieModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\ZombieModel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
