--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -172,8 +172,10 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityType.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityTypeDescriptor.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\MobCategory.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\entity\Spider.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\entity\Zombie.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\Arrow.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\Skeleton.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\Spider.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\Zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -298,8 +300,10 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Sheep.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\SynchedEntityData.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\MobCategory.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\entity\Spider.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\entity\Zombie.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\Arrow.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\Skeleton.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\Spider.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\Zombie.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
