--- a/platforms/windows/projects/Common/Common.vcxproj.filters
+++ b/platforms/windows/projects/Common/Common.vcxproj.filters
@@ -73,7 +73,7 @@
     <ClInclude Include="$(MC_ROOT)\source\common\SmoothFloat.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\common\DataIO.h">
+    <ClInclude Include="$(MC_ROOT)\source\common\DataIO.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
