--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Skeleton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Spider.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Zombie.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -304,6 +305,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Skeleton.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Spider.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Zombie.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\EntityFactory.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
