--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,15 +3,16 @@ project(reminecraftpe-core)
 
 # Build
 add_library(reminecraftpe-core STATIC
-    common/Random.cpp
-    common/Utils.cpp
+    common/CThread.cpp
+	common/DataIO.cpp
+    common/Logger.cpp
     common/Matrix.cpp
     common/Mth.cpp
-    common/Timer.cpp
-    common/CThread.cpp
-    common/Util.cpp
-    common/Logger.cpp
+    common/Random.cpp
     common/SmoothFloat.cpp
+    common/Timer.cpp
+    common/Util.cpp
+    common/Utils.cpp
     client/app/App.cpp
     client/app/AppPlatform.cpp
     client/app/Minecraft.cpp
@@ -137,6 +138,21 @@ add_library(reminecraftpe-core STATIC
     client/player/input/TouchscreenInput_TestFps.cpp
     client/player/input/UnifiedTurnBuild.cpp
     client/network/ClientSideNetworkHandler.cpp
+	nbt/CompoundTag.cpp
+	nbt/DoubleTag.cpp
+	nbt/EndTag.cpp
+	nbt/FloatTag.cpp
+	nbt/Int8ArrayTag.cpp
+	nbt/Int8Tag.cpp
+	nbt/Int16Tag.cpp
+	nbt/Int32ArrayTag.cpp
+	nbt/Int32Tag.cpp
+	nbt/Int64ArrayTag.cpp
+	nbt/Int64Tag.cpp
+	nbt/ListTag.cpp
+	nbt/NbtIo.cpp
+	nbt/StringTag.cpp
+	nbt/Tag.cpp
     network/packets/UpdateBlockPacket.cpp
     network/packets/RequestChunkPacket.cpp
     network/packets/PlayerEquipmentPacket.cpp
@@ -154,6 +170,7 @@ add_library(reminecraftpe-core STATIC
     network/packets/MovePlayerPacket.cpp
     network/packets/MessagePacket.cpp
     network/ServerSideNetworkHandler.cpp
+    network/RakIO.cpp
     network/RakNetInstance.cpp
     network/MinecraftPackets.cpp
     network/NetEventCallback.cpp
@@ -189,6 +206,7 @@ add_library(reminecraftpe-core STATIC
     world/entity/WaterAnimal.cpp
     world/entity/Monster.cpp
     world/entity/Rocket.cpp
+	world/entity/EntityFactory.cpp
     world/entity/MobFactory.cpp
     world/entity/Chicken.cpp
     world/entity/Cow.cpp
