--- a/platforms/windows/projects/Common/Common.vcxproj.filters
+++ b/platforms/windows/projects/Common/Common.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClCompile Include="$(MC_ROOT)\source\common\SmoothFloat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\compat\LegacyCPPCompatibility.hpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\common\DataIO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -74,6 +71,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\common\DataIO.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\compat\LegacyCPP.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\compat\LegacyCPP_Compat.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\compat\LegacyCPP_Info.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
