Fixed building via Xcode & for C++03  * Changed iOS bundle identifier from com.mojang.minecraftpe to io.github.reminecraftpe.minecraftpe  * Fixed iOS status bar hiding on iOS 7+

--- a/platforms/ios/minecraftpe-Info.plist
+++ b/platforms/ios/minecraftpe-Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Minecraft PE</string>
+	<string>ReMinecraftPE</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>com.mojang.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>io.github.reminecraftpe.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -36,6 +36,8 @@
 	<array/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
