--- a/platforms/CMakeLists.txt
+++ b/platforms/CMakeLists.txt
@@ -2,10 +2,11 @@ project(reminecraftpe-platforms)
 
 # Select & Build
 set(DEFAULT_PLATFORM "sdl")
-if(WIN32)
+if(MCPE_WIN32)
     set(DEFAULT_PLATFORM "windows")
 endif()
 set(REMCPE_PLATFORM "${DEFAULT_PLATFORM}" CACHE STRING "ReMCPE Platform (Check <root>/platforms)")
+message(STATUS "Selected Platform: ${REMCPE_PLATFORM}")
 add_subdirectory("${REMCPE_PLATFORM}")
 
 # Load Sound
