--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\Screen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ChatScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConfirmScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConvertWorldScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\DeathScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\DeleteWorldScreen.hpp" />
@@ -197,6 +198,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\Screen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ChatScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConfirmScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConvertWorldScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\DeathScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\DeleteWorldScreen.cpp" />
