Dreamcast ALMOST compiled, SDL1 on PC untested.

--- a/platforms/sdl1/CMakeLists.txt
+++ b/platforms/sdl1/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16.0)
-project(reminecraftpe-sdl)
+project(reminecraftpe-sdl1)
 
 # SDL Build
 target_compile_definitions(reminecraftpe-core
@@ -34,44 +34,17 @@ endif()
 
 # SDL
 add_library(SDL INTERFACE)
-if(ANDROID OR MCPE_WIN32)
-    # Use Vendored SDL (Only For Android)
-    add_subdirectory(../../thirdparty/SDL/src SDL EXCLUDE_FROM_ALL)
-    target_link_libraries(SDL INTERFACE SDL::SDL)
-elseif(EMSCRIPTEN)
-    # Use Emscripten's SDL
-    set(SDL_FLAG -sUSE_SDL=1)
-    target_compile_options(SDL INTERFACE "${SDL_FLAG}")
-    target_link_options(SDL INTERFACE "${SDL_FLAG}")
-else()
-    # Use System SDL
-    find_package(SDL REQUIRED)
-    target_link_libraries(SDL INTERFACE SDL::SDL)
-endif()
+
+# Use System SDL
+find_package(SDL REQUIRED)
+include_directories(${SDL_INCLUDE_DIR})
+target_link_libraries(SDL INTERFACE ${SDL_LIBRARY})
+
 target_link_libraries(reminecraftpe-core PUBLIC SDL)
-if(TARGET SDL::SDLmain)
-    target_link_libraries(reminecraftpe SDL::SDLmain)
+if(SDLMAIN_LIBRARY)
+    target_link_libraries(reminecraftpe ${SDLMAIN_LIBRARY})
 endif()
 
 # OpenGL
-if(ANDROID)
-    find_library(GLES_LIB GLESv1_CM REQUIRED)
-    target_link_libraries(reminecraftpe-core PUBLIC "${GLES_LIB}")
-    target_compile_definitions(reminecraftpe-core PUBLIC USE_GLES)
-else()
-    find_package(OpenGL REQUIRED)
-    target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
-    if(EMSCRIPTEN)
-        # Use WebGL 2
-        target_link_options(reminecraftpe-core PUBLIC
-            -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2
-            -sLEGACY_GL_EMULATION -sGL_FFP_ONLY
-        )
-    endif()
-endif()
-
-# WASM
-if(EMSCRIPTEN)
-    # Export Resize Function
-    target_link_options(reminecraftpe PRIVATE -sEXPORTED_FUNCTIONS=_main,_resize_from_js -sEXPORTED_RUNTIME_METHODS=ccall)
-endif()
+find_package(OpenGL REQUIRED)
+target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
