Add tiles & items

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -252,6 +252,8 @@ add_library(reminecraftpe-core STATIC
     world/level/levelgen/feature/ClayFeature.cpp
     world/level/levelgen/feature/FlowerFeature.cpp
     world/level/levelgen/feature/SpruceFeature.cpp
+    world/level/levelgen/feature/PumpkinFeature.cpp
+    world/level/levelgen/feature/CactusFeature.cpp
     world/level/levelgen/biome/Biome.cpp
     world/level/levelgen/biome/BiomeSource.cpp
     world/level/levelgen/chunk/RandomLevelSource.cpp
@@ -272,6 +274,9 @@ add_library(reminecraftpe-core STATIC
     world/item/ItemInstance.cpp
     world/item/RocketItem.cpp
     world/item/Item.cpp
+    world/item/AuxTileItem.cpp
+    world/item/ClothItem.cpp
+    world/item/SlabItem.cpp
     world/particle/RedDustParticle.cpp
     world/particle/TerrainParticle.cpp
     world/particle/BubbleParticle.cpp
@@ -320,6 +325,14 @@ add_library(reminecraftpe-core STATIC
     world/tile/FarmTile.cpp
     world/tile/DoorTile.cpp
     world/tile/RocketLauncherTile.cpp
+    world/tile/CactusTile.cpp
+    world/tile/TallGrass.cpp
+    world/tile/DeadBush.cpp
+    world/tile/PumpkinTile.cpp
+    world/tile/SoulSandTile.cpp
+    world/tile/GlowstoneTile.cpp
+    world/tile/web.cpp
+    world/tile/FenceTile.cpp
     renderer/GL/GL.cpp
 )
 target_include_directories(reminecraftpe-core PUBLIC . ..)
