--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -48,7 +48,9 @@
     <ClCompile Include="$(MC_ROOT)\source\world\gamemode\CreativeMode.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\gamemode\GameMode.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\gamemode\SurvivalMode.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\AuxTileItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\CameraItem.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\ClothItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\DoorItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\Inventory.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\Item.cpp" />
@@ -56,6 +58,7 @@
     <ClCompile Include="$(MC_ROOT)\source\world\item\TileItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\TilePlanterItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\RocketItem.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\SlabItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\Dimension.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\Explosion.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\Level.cpp" />
@@ -68,6 +71,7 @@
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\chunk\RandomLevelSource.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\chunk\TestChunkSource.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\BirchFeature.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\CactusFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\ClayFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\Feature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\FlowerFeature.cpp" />
@@ -75,10 +79,12 @@
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\LargeFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\OreFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\PineFeature.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\PumpkinFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\ReedsFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\SpringFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\SpruceFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\TreeFeature.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\feature\VegetationFeature.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\synth\ImprovedNoise.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\synth\PerlinNoise.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\synth\Synth.cpp" />
@@ -113,13 +119,17 @@
     <ClCompile Include="$(MC_ROOT)\source\world\tile\RocketLauncherTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\BookshelfTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\Bush.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\CactusTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\ClayTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\ClothTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\DeadBush.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\DirtTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\DoorTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\FarmTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\FenceTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\FireTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\GlassTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\GlowstoneTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\GrassTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\GravelTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\HalfTransparentTile.cpp" />
@@ -133,21 +143,25 @@
     <ClCompile Include="$(MC_ROOT)\source\world\tile\MetalTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\ObsidianTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\OreTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\PumpkinTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\RedStoneOreTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\ReedTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\SandStoneTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\SandTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\Sapling.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\SoulSandTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\SpongeTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\StairTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\StoneSlabTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\StoneTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\TallGrass.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\Tile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\TntTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\TopSnowTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\TorchTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\TransparentTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\TreeTile.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\tile\Web.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\tile\WireTile.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\path\Node.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\path\Path.cpp" />
@@ -191,7 +205,9 @@
     <ClInclude Include="$(MC_ROOT)\source\world\gamemode\GameMode.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\gamemode\SurvivalMode.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\gamemode\GameType.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\AuxTileItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\CameraItem.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\ClothItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\DoorItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\Inventory.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\Item.hpp" />
@@ -199,6 +215,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\item\TileItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\TilePlanterItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\RocketItem.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\SlabItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\Dimension.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\Explosion.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\Level.hpp" />
@@ -239,13 +256,17 @@
     <ClInclude Include="$(MC_ROOT)\source\world\tile\RocketLauncherTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\BookshelfTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\Bush.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\CactusTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\ClayTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\ClothTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\DeadBush.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\DirtTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\DoorTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\FarmTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\FenceTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\FireTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\GlassTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\GlowstoneTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\GrassTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\GravelTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\HalfTransparentTile.hpp" />
@@ -259,21 +280,25 @@
     <ClInclude Include="$(MC_ROOT)\source\world\tile\MetalTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\ObsidianTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\OreTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\PumpkinTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\RedStoneOreTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\ReedTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\SandStoneTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\SandTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\Sapling.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\SoulSandTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\SpongeTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\StairTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\StoneSlabTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\StoneTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\TallGrass.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\Tile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\TntTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\TopSnowTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\TorchTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\TransparentTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\TreeTile.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\tile\Web.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\tile\WireTile.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\path\Node.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\path\Path.hpp" />
