--- a/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
@@ -24,3 +24,6 @@ VALID_ARCHS = $(VALID_ARCHS_MACOS)
 //ARCHS = $(ARCHS_MACOS)
 // Just use whatever Xcode is trying to use...
 ARCHS = $(ARCHS)
+
+BACKEND_SDL1 = USE_SDL1 STBI_NO_THREAD_LOCALS
+BACKEND_SDL2 = USE_SDL2
